# test_pypi

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  tox.ini
.github/workflows/: python-app.yml
pyfoobarcli/: cli.py
tests/: test_cli.py
