[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfoobarcli"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
    {name = "Steve King"},
    {email = "steve@steveking.site"}
]
keywords = ["foobar", "cli"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build"
]

[project.urls]
homepage = "https://github.com/sjking/pyfoobarcli"

[tool.setuptools.packages.find]
include = ["pyfoobarcli*"]
exclude = ["tests*"]

[project.scripts]
foobar = "pyfoobarcli.cli:main"
