[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyfoobarcli"
version = "0.1.3"
readme = "README.md"
requires-python = ">=3.6"
license = {text = "MIT License"}
authors = [
    {name = "Steve King"},
    {email = "steve@steveking.site"}
]
keywords = ["foobar", "cli"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "build"
]

[project.urls]
homepage = "https://github.com/sjking/test_pypi"

[tool.setuptools.packages.find]
include = ["pyfoobarcli*"]
exclude = ["tests*"]

[project.scripts]
foobar = "pyfoobarcli.cli:main"
